deployment/flagger/deployment.yaml
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: coffee-shop
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: coffee-shop
        version: v1
    spec:
      containers:
      - name: coffee-shop
        image: sdaschner/coffee-shop:zero-downtime-2
        imagePullPolicy: Always
        livenessProbe:
          exec:
            command:
            - "/bin/sh"
            - "-c"
            - "curl -f localhost:8080/"
          initialDelaySeconds: 10
        readinessProbe:
          exec:
            command:
            - "/bin/sh"
            - "-c"
            - "curl -f localhost:8080/coffee-shop/resources/health"
          initialDelaySeconds: 10
          periodSeconds: 5
          failureThreshold: 2
        ports:
        - containerPort: 8080
      restartPolicy: Always
---
