deployment/flagger/routing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: coffee-shop
spec:
  host: coffee-shop
  subsets:
  - name: v1
    labels:
      version: v1
---

#apiVersion: networking.istio.io/v1alpha3
#kind: VirtualService
#metadata:
#  name: coffee-shop-gateway
#spec:
#  hosts:
#  - "*"
#  gateways:
#  - coffee-shop-gateway
#  http:
#  - route:
#    - destination:
#        host: coffee-shop
#        subset: v1
#        port:
#          number: 8080
#---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: coffee-shop
spec:
  hosts:
  - coffee-shop
  http:
  - route:
    - destination:
        host: coffee-shop
        subset: v1
---
